--- a/styles.css
+++ b/styles.css
@@ -12,14 +12,12 @@ html {
 }
 
 canvas {
+  position: fixed;
+  width: 100%;
+  height: 100%;
   background-color: rgba(78, 69, 69, 0.644);
-  color: #7c7219cc;
 }
 
-#score {
-  position: fixed;
-  margin-left: 1rem;
-  margin-top: 1rem;
-  font-size: 2rem;
-  color: white;
+#pieces {
+  display: none;
 }
